--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,22 +2,20 @@
   "name": "Indcric",
   "short_name": "Indcric",
   "description": "A 3D cube customizer PWA.",
-  "icons": [
-    {
-      "src": "https://placehold.co/192x192.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "https://placehold.co/512x512.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "any maskable"
-    }
-  ],
   "start_url": "/",
   "display": "standalone",
   "background_color": "#1E1E1E",
-  "theme_color": "#353535"
+  "theme_color": "#1E1E1E",
+  "icons": [
+    {
+      "src": "https://placehold.co/192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "https://placehold.co/512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
