--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,20 +2,21 @@
   "name": "Indcric",
   "short_name": "Indcric",
   "description": "A 3D cube customizer PWA.",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#1E1E1E",
-  "theme_color": "#1E1E1E",
   "icons": [
     {
-      "src": "https://placehold.co/192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "theme_color": "#1E1E1E",
+  "background_color": "#1E1E1E",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait"
 }
