--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "embla-carousel-react": "^8.6.0",
+    "embla-carousel-react": "^8.1.7",
     "firebase": "^11.9.1",
     "framer-motion": "^11.3.19",
     "genkit": "^1.13.0",
@@ -61,6 +61,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.166.0",
+    "embla-carousel": "^8.1.7",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
