--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.13.0",
-    "@genkit-ai/next": "^1.13.0",
+    "@genkit-ai/googleai": "1.11.0",
+    "@genkit-ai/next": "1.11.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -43,13 +43,12 @@
     "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.2",
     "framer-motion": "^11.3.19",
-    "genkit": "^1.13.0",
+    "genkit": "1.11.0",
     "lucide-react": "^0.475.0",
-    "next": "14.2.5",
-    "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "next": "15.0.0-rc.0",
+    "react": "19.0.0-rc-f994737d14-20240522",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -58,11 +57,11 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/three": "^0.166.0",
     "embla-carousel": "^8.1.7",
-    "genkit-cli": "^1.13.0",
+    "genkit-cli": "1.11.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
