--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@genkit-ai/googleai": "1.11.0",
-    "@genkit-ai/next": "1.11.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -45,10 +44,10 @@
     "framer-motion": "^11.3.19",
     "genkit": "1.11.0",
     "lucide-react": "^0.475.0",
-    "next": "15.0.0-rc.0",
-    "react": "19.0.0-rc-f994737d14-20240522",
+    "next": "14.2.5",
+    "react": "18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -57,7 +56,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.166.0",
     "embla-carousel": "^8.1.7",
